--- a/src/Lateral.css
+++ b/src/Lateral.css
@@ -17,8 +17,6 @@
 
 }
 .Imgbot{
-    /*  */
-
     position: absolute;
     width: 45px;
     height: 52px;
@@ -38,7 +36,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-   
 }
 .admin{
     position: absolute;
@@ -67,4 +64,7 @@
     font-size: 24px;
     background-color: #0F123F;
     border-style: none;
+}
+button {
+    color: white;
 }
