--- a/src/Lateral.css
+++ b/src/Lateral.css
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 900px;
+    height: 100vh;
     width: 300px;
 }
 .btns{
