--- a/src/Boton.css
+++ b/src/Boton.css
@@ -4,8 +4,6 @@
     color: white;
     border: none;
     border-radius: 13px;
-    padding-left: 16%;
-    padding-right: 16%;
     padding-top: 3%;
     padding-bottom: 3%;
     text-align: center;
@@ -24,8 +22,6 @@
     color: white;
     border: none;
     border-radius: 13px;
-    padding-left: 16%;
-    padding-right: 16%;
     padding-top: 3%;
     padding-bottom: 3%;
     text-align: center;
@@ -80,8 +76,6 @@
     color: white;
     border: none;
     border-radius: 13px;
-    padding-left: 16%;
-    padding-right: 16%;
     padding-top: 3%;
     padding-bottom: 3%;
     text-align: center;
@@ -100,8 +94,6 @@
     color: white;
     border: none;
     border-radius: 13px;
-    padding-left: 16%;
-    padding-right: 16%;
     padding-top: 3%;
     padding-bottom: 3%;
     text-align: center;
@@ -114,18 +106,38 @@
     padding-right: 13%;
 }
 
-#botonCancelar {
+.botonAzulMarino {
+    font-family: "Red Hat Display", sans-serif;
+    font-weight: bold;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    text-align: center;
+    font-size: 104%;
     background-color: #0F123F;
+    border: 2px solid #455BA6;
+    color: white;
+    font-weight: 550;
 }
 
-#botonRegistrar {
+.botonSalmon {
+    font-family: "Red Hat Display", sans-serif;
+    font-weight: bold;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    text-align: center;
+    font-size: 104%;
     background-color: #EE786C;
+    border: 2px solid #EE786C;
+    color: white;
+    font-weight: 550;
 } 
-
-#botonGuardarCambios {
-    background-color: #EE786C;
-}
-
-#botonConfirmar {
-    background-color: #EE786C;
-}
