--- a/src/RadioButton.css
+++ b/src/RadioButton.css
@@ -1,5 +1,6 @@
 .container-radio {
     font-family: 'Raleway';
+    margin-right: 30px;
     color: #0F123F;
     display: block;
     position: relative;
