--- a/src/VentanaAgregarUsuario.css
+++ b/src/VentanaAgregarUsuario.css
@@ -11,23 +11,24 @@ main {
     height: 85vh;
     width: 85%;
     margin: 0%;
-    padding: 30px;
+    padding: 30px 50px;
 }
 
-header {
-    padding-left: 4%;
-    padding-bottom: 2%;
-}
+
 
 .radiosContentPage {
+    width: 100%;
     display: flex;
     flex-direction: row;
-    padding-left: 4%;
-    padding-right: 4%;
-    justify-content:space-between;
+    justify-content:flex-end;
+    margin-bottom: 50px;
 }
 
-.tablaContentPage {
-    padding-left: 4%;
-    padding-right: 4%;
+
+.inputsContentPage {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap
 };
