--- a/src/Boton.css
+++ b/src/Boton.css
@@ -119,7 +119,7 @@
     text-align: center;
     font-size: 104%;
     background-color: #0F123F;
-    border: 2px solid #455BA6;
+    border: 2px solid #0F123F;
     color: white;
     font-weight: 550;
 }
