--- a/src/plantillaInputs.css
+++ b/src/plantillaInputs.css
@@ -6,7 +6,9 @@
     background: #CACACA;
     border-radius: 50px;
     font-weight: 600;
-    margin-bottom: 50px;
+    margin-bottom: 2%;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .input-gral:focus{
@@ -15,11 +17,11 @@
 
 
 .w-3{
-    width: 28%;
+    width: 25%;
 }
 
 
 
 .w-2{
-    width: 45%;
+    width: 40%;
 }
