--- a/src/Checkbox.css
+++ b/src/Checkbox.css
@@ -12,6 +12,8 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    margin-left: 40%;
+    margin-right: auto;
 }
 
 .container-check .checkbox {
@@ -29,7 +31,7 @@
     height: 35px;
     width: 35px;
     background-color: #EE786C;
-    border-radius: 0;
+    border-radius: 5px;
 }
 
 .container-check:hover .checkbox~.checkmark {
