--- a/src/FormAutenticacion.css
+++ b/src/FormAutenticacion.css
@@ -16,7 +16,7 @@
     margin-bottom: 50px;
 }
 
-input{
+.contenedor input{
     width: 80%;
     border-radius: 35px;
     border-style: none;
@@ -31,7 +31,7 @@ input:focus{
     outline: none;
 }
 
-.btnIngresar{
+.contenedor button{
     color: #fff;
     font-weight: bold;
     width: 60%;
