Cambios en la estructura del componente, que ahora sigue un estandar en todas las vistas que incluyen barra lateral.

--- a/src/LandingAdminUsuarios.css
+++ b/src/LandingAdminUsuarios.css
@@ -19,7 +19,7 @@ header {
     padding-bottom: 2%;
 }
 
-.filtrosContentPage {
+.filtrosContentPageLanding {
     display: flex;
     flex-direction: row;
     padding-left: 4%;
@@ -30,4 +30,4 @@ header {
 .tablaContentPage {
     padding-left: 4%;
     padding-right: 4%;
-};
+}
