--- a/src/PasosSeguimiento.css
+++ b/src/PasosSeguimiento.css
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    width: 40%;
+    width: 70%;
 }
 
 .circulo-texto{
     font-family: 'Red Hat Display';
-    width: 30%;
+    width: 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,7 +15,7 @@
     color: #525252;
 }
 
-.circulo-texto h4{
+.circulo-texto h5{
     margin-top: 10px;
 }
 
@@ -48,11 +48,11 @@
     color: #0F123F;
 }
 
-.linea{
+.lineaPasos{
     position: absolute;
-    width: 30%;
+    width: 40%;
     height: 3px;
-    margin-top: 30px;
+    margin-top: 40px;
     background: #C4C4C4;
     z-index: -1;
 }
