--- a/src/Aprospecto.css
+++ b/src/Aprospecto.css
@@ -4,6 +4,7 @@
     background-color: #0F123F;
     border: 1em solid #0F123F;
 }
+
 .cuerpito{
     display: flex;
     flex-direction: column;
@@ -15,29 +16,43 @@
     margin: 0%;
     padding: 30px 50px;
 }
+
 .cabeza{
     display: flex;
     justify-content: space-between;
     margin-bottom: 12%;
 }
+
 .fechachida{
-    background: #A5A5A5;
-    width: 40%;
-    height: 60%;
+    font-family: "Raleway", sans-serif;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
     text-align: center;
-    border-radius: 62px;
-    font-family: 'Raleway';
-    font-size: 100%;
-    line-height: 500%;
-    color: rgba(242, 242, 242, 0.7);
+    font-size: 18px;
+    vertical-align: middle;
+    background-color: #A5A5A5;
+    border: 2px solid #A5A5A5;
+    color: white;
+    font-weight: 550;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 4em;
 }
+
 .primeralinea{
     margin-bottom: 2%;
 }
+
 .segundalinea{
     display: flex;
     margin-bottom: 7%;
 }
+
 .aprospectobtns{
     display: flex;
     justify-content: space-between;
