--- a/src/TablaAdminClientesAsesor.css
+++ b/src/TablaAdminClientesAsesor.css
@@ -6,7 +6,8 @@ h5 {
 	font-family: 'Raleway', sans-serif;
 	padding-bottom: 0%;
 	margin-bottom: 0%;
-	width: 90%; 
+	width: 100%;
+	max-height: 50vh;
 }
 
 .encabezadoTablaClientesAsesor {
@@ -68,7 +69,7 @@ h5 {
 .tablaClientesAsesor {
 	max-height: 400px;
 	overflow-y: scroll;
-	height: 350px;
+	height: 300px;
   	scroll-behavior: smooth;
 	margin-top: 0em;
 	padding: 0em 0.2em 0em 0.2em;
@@ -78,7 +79,7 @@ h5 {
 	text-rendering: optimizeLegibility;
 	background: #F2F5FA;	
 	border-radius: 0.6em;
-	width: 90%;
+	width: 100%;
 }
 
 tr:hover {background-color: #F2F5FA;}
@@ -188,8 +189,9 @@ tr:hover {background-color: #F2F5FA;}
     background-color: #F2F5FA;
 }
 
-.semaforoInfo{
+.semaforoInfoClientesAsesor{
 	display: flex;
+	flex-direction: row;
 	padding-left: 10%;
 	font-family: 'Red Hat Display';
 	font-style: normal;
