--- a/src/Boton.css
+++ b/src/Boton.css
@@ -1,3 +1,17 @@
+button {
+    outline: none;
+}
+
+button:hover {
+    box-shadow: 0px 15px 25px -5px rgba(darken(dodgerblue, 40%));
+    transform: scale(1.03);
+}
+
+button:active {
+    box-shadow: 0px 4px 8px rgba(darken(dodgerblue, 30%));
+    transform: scale(.98);
+}
+
 #botonEditarUsuario {
     font-family: "Red Hat Display", sans-serif;
     font-weight: bold;
