Cambio de estilos de la tabla dentro de la vista clientes del asesor

--- a/src/AdministracionClientesAsesor.css
+++ b/src/AdministracionClientesAsesor.css
@@ -1,3 +1,5 @@
-.contentpage{
-    height: 100vh;
+.tablaContentPageAsesor {
+    font-family: "Red Hat Display", sans-serif;
+    padding-left: 4%;
+    padding-right: 4%;
 }
