--- a/src/LandingAdminProspectos.css
+++ b/src/LandingAdminProspectos.css
@@ -1,35 +1,34 @@
-#mainAdminProspectos {
+main {
     display: flex;
     flex-direction: row;
     background-color: #0F123F;
     border: 1em solid #0F123F;
 }
 
-.contenido { 
+.contentPage { 
     background-color: #F2F5FA;
     border-radius: 10px;
-    height: 90vh;
+    height: 85vh;
     width: 85%;
     margin: 0%;
     padding: 30px;
 }
 
-#headerAdminProspectos {
+header {
     padding-left: 4%;
     padding-bottom: 2%;
 }
 
-.filtros {
+.filtrosContentPageLanding {
     display: flex;
     flex-direction: row;
     padding-left: 4%;
     padding-right: 4%;
-    justify-content: space-between;
+    justify-content:space-between;
 }
 
-.tablaProspectos {
+.tablaContentPage {
     padding-left: 4%;
     padding-right: 4%;
-    height: 85vh;
-    width: 93%;
-};
+    height: 30vh;
+}
