--- a/src/LandingAdminUsuarios.css
+++ b/src/LandingAdminUsuarios.css
@@ -30,8 +30,5 @@ header {
 .tablaContentPage {
     padding-left: 4%;
     padding-right: 4%;
-}
-
-.tablaContentPage .tabla {
-    max-height: 40vh;
+    height: 30vh;
 }
